tests/fixtures/invalid/bytes_bitor_none.py
# Cannot bitwise OR Bytes and None
x: bytes = b"hello" | None
